--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@picocss/pico": "^2.0.3",
     "astro": "^4.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -18,15 +19,15 @@
   "devDependencies": {
     "@astrojs/check": "^0.5.6",
     "@astrojs/react": "^3.0.10",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "jsdom": "^24.0.0",
-    "typescript": "^5.3.3",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
+    "typescript": "^5.3.3",
     "vitest": "^1.3.1"
   }
 }
