--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@astrojs/node": "^8.2.1",
     "@picocss/pico": "^2.0.3",
     "astro": "^4.4.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wretch": "^2.8.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.5.6",
