--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,5 @@
   "semi": true,
   "singleQuote": false,
   "printWidth": 120,
-  "plugins": ["prettier-plugin-astro"],
-  "pluginSearchDirs": false
+  "plugins": ["prettier-plugin-astro"]
 }
