--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "test": "vitest"
+    "test": "vitest",
+    "pretty": "prettier --write .",
+    "lint": "eslint . --ext .js,.ts,.tsx,.astro"
   },
   "dependencies": {
     "@astrojs/node": "^8.2.1",
@@ -26,6 +28,12 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
     "jsdom": "^24.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
