--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^4.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "valibot": "^0.29.0",
     "wretch": "^2.8.0"
   },
   "devDependencies": {
